@@ -1,3 +1,8 @@
+2002-02-09  Mike Kestner <mkestner@speakeasy.net>
+
+	* generator/StructBase.cs (GenMethod): Add handle arg to paramless
+	  method call and extern.
+
 2002-02-08  Mike Kestner <mkestner@speakeasy.net>
 
 	* README : Some updates.
